k8s/mybio-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: applications
  labels:
    app.kubernetes.io/part-of: mybio-platform
    name: applications
