k8s/mybio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybio
  namespace: applications
  labels:
    app: mybio
spec:
  type: ClusterIP
  selector:
    app: mybio
  ports:
    - name: http
      port: 80
      targetPort: http
