k8s/mybio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mybio
  namespace: applications
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: mybio.ecomnix.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mybio
                port:
                  number: 80
